--- a/programa avanzada/src/Visual/AltaTecnologiaInter.form
+++ b/programa avanzada/src/Visual/AltaTecnologiaInter.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Tecnologia"/>
+    <Property name="title" type="java.lang.String" value="Tecnologias"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
